Fixed: Issues caused by localStorage and dummyApplicants, and updated Header.css to z-index 999

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -9,6 +9,7 @@
     margin-bottom: 1rem;
     position: sticky;
     top: 0;
+    z-index: 999;
 
 }
 
